optimize applicationDefaultJvmArgs for rest-api